--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,12 @@
         android:theme="@style/Theme.EmployeeCrudWithApi"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <activity
-            android:name=".activity.AddEmployeeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activity.EmployeeListActivity"
-            android:exported="false" />
+
+        <service
+            android:name=".service.MyBackgroundService"
+            android:enabled="true"
+            android:exported="false"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
